switch to bearer auth
